# pyfocusedcrawler

./: LICENSE  README.md  main.py  pyproject.toml
app/crawler/: crawler.py  crawler_helpers.py
app/parsers/: parsers_heuristics.py
app/parsers/generic_link_extractor/: generic_text_regexing.py
app/parsers/html_link_extractor/: html_link_extractor.py  html_parser.py
app/parsers/html_link_extractor/html_tags_extractors/: html_tags_extractors.py
app/parsers/js_link_extractor/: js_link_extractor.py  js_parser.py
app/parsers/js_link_extractor/js_node_extractors/: js_node_extractors.py
app/parsers/robots_file_link_extractor/: robots_file_link_extractor.py
app/url/: url_validate_external.py  url_validate_local.py  url_validation.py
app/url/helpers/: url_heuristics.py  url_path_operations.py
tests/integration_tests/: test_html_link_extractor.py  test_js_link_extractor.py  test_url_validation.py
tests/unit_tests/: test_extract_links_from_robots_file.py  test_generic_text_regexing.py  test_registered_domain_extract.py
